--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
@@ -34,6 +35,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^7.2.0",
     "multer": "^2.0.2",
     "pdf-parse-new": "^1.3.3",
     "sqlite3": "^5.1.7",
