chore: update .gitignore and package dependencies
- Modified .gitignore to include all database files and upload directories for better management.
- Updated package-lock.json and package.json to add new dependencies for testing and type definitions, including jest, supertest, and their respective type definitions.

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -15,13 +15,21 @@ yarn-error.log*
 dist/
 build/
 
-# Database
-data/app.db
-data/*.db
+# Database files
+data/
+data/*
+*.db
+*.sqlite
+*.sqlite3
+:memory:
 
-# Uploads
+# Uploads and test uploads
 uploads/
 uploads/*
+uploads-test/
+uploads-test/*
+test-uploads/
+test-uploads/*
 
 # Logs
 logs/
